# MLIR

./: .gitignore  CMakeLists.txt  README.md
include/Dialect/: NorthStarAttrs.h  NorthStarAttrs.td  NorthStarConstraints.td  NorthStarDialect.h  NorthStarDialect.td  NorthStarEunms.h  NorthStarEunms.td  NorthStarOps.h  NorthStarOps.td  NorthStarTypes.h  NorthStarTypes.td
include/Interfaces/: DistributeParallelismInterfaces.h  DistributeParallelismInterfaces.td
include/Passes/: Passes.h  Passes.td
include/Utils/: File.h  Key.h
src/: CMakeLists.txt
src/Dialect/: CMakeLists.txt  NorthStarAttrs.cpp  NorthStarDialect.cpp  NorthStarOps.cpp  NorthStarTypes.cpp
src/Interfaces/: CMakeLists.txt  DistributeParallelismInterfaces.cpp
src/Passes/: ApplyDistributeTransform.cpp  CMakeLists.txt  MarkDistributeParallelParameters.cpp
src/Utils/: CMakeLists.txt  File.cpp
tests/: CMakeLists.txt  main.cpp
tests/cases/: test_attrs.cpp  test_example.cpp  test_interfaces.cpp  test_ir_struct.cpp  test_ops.cpp  test_passes.cpp  test_types.cpp
tests/include/: utils.h
